k8s/aws-improved/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api-java-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            component: api-java
    template:
        metadata:
            labels:
                component: api-java
        spec:
            containers:
                - name: api
                  image: 1after/api-java
                  ports:
                    - containerPort: 8080
